--- a/package.json
+++ b/package.json
@@ -16,6 +16,21 @@
   "author": "Dashbot",
   "license": "MIT",
   "dependencies": {
-    "q": "^1.4.1"
+    "q": "1.4.1"
+  },
+  "devDependencies": {
+    "eslint": "3.4.0",
+    "babel-eslint": "6.1.2",
+    "eslint-config-dashbot-backend": "1.0.1",
+    "eslint-plugin-async": "0.1.1",
+    "eslint-plugin-node": "2.0.0"
+  },
+  "engines": {
+    "node": "7.7.1"
+  },
+  "eslintConfig": {
+    "extends": [
+      "dashbot-backend"
+    ]
   }
 }
