--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Dashbot",
   "license": "MIT",
   "dependencies": {
+    "lodash": "4.17.4",
     "q": "1.4.1"
   },
   "devDependencies": {
